# arduino_telescope_mount

./: platformio.ini
indi-arduinogemdriver/: CMakeLists.txt  indi_arduino_gem_driver.cpp  indi_arduino_gem_driver.h
src/: ArduinoGEMDriver.ino  DS1307_RTC.cpp  DS1307_RTC.h  EEPROMHandler.cpp  LX200Serial.cpp  SFMotor.cpp  SFMotor.h  axis.cpp  axis.h  encoders.cpp  encoders.h  settings.h
